--- a/fileUpload/.env
+++ b/fileUpload/.env
@@ -3,3 +3,7 @@ API_KEY = 486355728381161
 API_SECRET = ykoytlRD9aEgl7J4doPsxd8xjnw
 MONGODB_URL = mongodb+srv://pritamchaudhary901:B8bUrglaAQPzL7pe@cluster0.0ty5x3d.mongodb.net/FileUploadDatabase
 PORT = 4000
+
+MAIL_HOST = smtp.gmail.com
+MAIL_USER = pritam797053@gmail.com
+MAIL_PASS = ksjbrobrpkowfjfa
