--- a/fileUpload/package.json
+++ b/fileUpload/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.5.0",
     "mongoose": "^8.1.3",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.0.3"
   }
 }
